test/classes/initializers/errors/generic-lhsInitRhsCons.good
generic-lhsInitRhsCons.chpl:20: error: type mismatch in assignment from hasConstruct to hasInit(int(64))
